# tese

./: .gitignore  experiencia_registo.txt
documento/: abbrevs.tex  abstract.tex  abstract_en.tex  acknows.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  doc_data.txt  mieic.bbl  mieic.blg  mieic.lof  mieic.lot  mieic.out  mieic.tex  mieic.toc  myrefs.bib
julio/: storage.xml  storageControl.xml
mieic-artigo/: resumo-pt.tex
mieic-artigo-en/: resumo-pt.tex
processfunc/: CMakeLists.txt  processfunc.cpp  processfunc.h
projecto/: CMakeLists.txt  CondeDoisSemaforos_v5.cpp  README  main.cpp  semaforo  todo.md
projecto/KinectDevice/: CMakeLists.txt  KinectDevice.cpp
projecto/Message/: CMakeLists.txt  Message.cpp  Message.h
projecto/MessageServer/: CMakeLists.txt  MessageServer.cpp  MessageServer.h
projecto/Model/: CMakeLists.txt  Model.cpp  Model.h
projecto/ModelDictionary/: CMakeLists.txt  ModelDictionary.cpp  ModelDictionary.h
projecto/PCLWorker/: CMakeLists.txt  PCLWorker.cpp  PCLWorker.h  processfunc.cpp  processfunc.h
projecto/gui/: CMakeLists.txt  Gui.cpp  Gui.h
resumo_/: resumo-pt (copy).tex
